convert java 23 zgc generational mode to executable example